--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
           <div class="shot"><img src="imagen7.jpeg" alt="Pantalla de registro o inicio de sesión"/></div>
           <div class="content">
             <h4>Acceso de prueba</h4>
-            <p>Puedes crear tu usuario o usar la cuenta de prueba (Usuario: <strong>RodGuarneros</strong> · Password: <strong>Mayo2025*</strong>).</p>
+            <p>Puedes crear tu usuario o usar la cuenta de prueba (Usuario: <strong>Se proporciona a los testers por email</strong> · Password: <strong>Lo recibirás por correo</strong>).</p>
           </div>
         </article>
         <article class="step">
